--- a/kuliah/pertemuan5/latihancss.html
+++ b/kuliah/pertemuan5/latihancss.html
@@ -4,27 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Belajar CSS</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       h1,
       h3 {
         color: lightblue;
         font-size: 50px;
-        font-family: Arial;
+        font-family: Bitcount Grid Single;
         text-align: center;
       }
+
       h3 {
-        color: red;
+        color: blueviolet;
+      }
+
+      p,
+      div {
+        color: purple;
+      }
+
+      div {
+        font-size: 50px;
+      }
+
+      div p {
+        font-size: 40px;
+      }
+
+      h3 + p {
+        text-align: center;
+      }
+
+      div + p {
+        font-family: arial;
+      }
+
+      div > p {
+        font-family: arial;
       }
     </style>
   </head>
   <body>
     <!-- <font color="blue" face="arial" size="+4" align="center"
       ><h1>Hallo World</h1></font> -->
+
     <h1>Hallo World</h1>
     <h3>Hallo ITW</h3>
 
     <p>Paragraf 1</p>
     <div>
+      <p>Paragraf 2</p>
+      <span>
+        <p>Paragraf 2</p>
+      </span>
       <p>Paragraf 2</p>
     </div>
     <p>Paragraf 3</p>
